--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-template",
+  "name": "mini-app-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "@tanstack/react-query": "^5.83.0",
     "@telegram-apps/init-data-node": "^2.0.10",
     "@telegram-apps/sdk-react": "^3.2.4",
     "@telegram-apps/telegram-ui": "^2.1.5",
     "@tonconnect/ui-react": "^2.1.0",
+    "better-auth": "^1.3.4",
     "eruda": "^3.0.1",
     "next": "15.3.1",
     "next-intl": "^4.1.0",
     "normalize.css": "^8.0.1",
+    "prisma": "^6.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
