--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Next.js: debug server-side",
+            "name": "Next.js: debug server-side (bun)",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
-            "args": ["dev"],
+            "runtimeExecutable": "bun",
+            "args": ["run", "dev:https"],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
             "skipFiles": [
