--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "normalize.css": "^8.0.1",
     "prisma": "^6.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/node": "^20",
